[project]
name = "concord"
version = "0.1.0"
description = "Pipeline for collecting the daily Congressional Record via api.congress.gov."
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [{ name = "John Campbell" }]
dependencies = [
    "httpx>=0.28.1",
    "pydantic>=2.13.4",
    "typer>=0.25.1",
]

[project.optional-dependencies]
mongo = ["pymongo>=4.0"]

[project.scripts]
concord = "concord.cli:main"

[dependency-groups]
dev = [
    "mongomock>=4.1",
    "mypy>=1.11",
    "pytest>=8.0",
    "ruff>=0.6",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/concord"]

[tool.ruff]
line-length = 100
target-version = "py312"
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "F",    # pyflakes
    "I",    # isort
    "UP",   # pyupgrade
    "B",    # flake8-bugbear
    "SIM",  # flake8-simplify
    "RUF",  # ruff-specific
]

[tool.mypy]
python_version = "3.12"
strict = true
files = ["src/concord"]

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra --strict-markers"
