[project]
name = "concord"
version = "0.1.0"
description = "Pipeline for collecting the daily Congressional Record via api.congress.gov."
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [{ name = "John Campbell" }]
dependencies = [
    "fastapi>=0.136.3",
    "httpx>=0.28.1",
    "jinja2>=3.1.6",
    "openai>=2.38.0",
    "pydantic>=2.13.4",
    "slowapi>=0.1.9",
    "sqlite-vec>=0.1.9",
    "tiktoken>=0.13.0",
    "typer>=0.25.1",
    "uvicorn[standard]>=0.48.0",
]

[project.optional-dependencies]
mongo = ["pymongo>=4.0"]

[project.scripts]
concord = "concord.cli:main"

[dependency-groups]
dev = [
    "mongomock>=4.1",
    "mypy>=1.11",
    "pre-commit>=4.0",
    "pytest>=8.0",
    "ruff>=0.6",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/concord"]

[tool.ruff]
line-length = 100
target-version = "py312"
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E", "F", "W",   # pycodestyle + pyflakes
    "I",             # isort
    "UP",            # pyupgrade
    "B",             # flake8-bugbear
    "SIM",           # flake8-simplify
    "RUF",           # ruff-specific
    "PL",            # pylint (PLC/PLE/PLR/PLW)
    "N",             # pep8-naming
    "C90",           # mccabe complexity
    "S",             # bandit (security)
    "A",             # shadowing builtins
    "ARG",           # unused arguments
    "RET",           # return statement issues
    "TRY",           # try/except antipatterns
    "PTH",           # use pathlib
    "ERA",           # commented-out code
    "TID",           # tidy imports
    "PT",            # pytest style
    "C4",            # comprehensions
    "PIE",
    "ISC",
    "G",             # logging format
]
ignore = [
    "TRY003",  # long exception messages — too noisy
    "ISC001",  # conflicts with formatter
]

[tool.ruff.lint.per-file-ignores]
"tests/**" = [
    "S101",     # asserts are the whole point in tests
    "ARG",      # fixtures often look unused
    "PLR2004",  # magic numbers are fine in tests
    "S105", "S106",  # hardcoded passwords in test data
    "A002",     # OpenAI-API-shaped stubs use `input=` kwarg
    "S608",     # dynamic SQL built from `?` placeholders only
    "PLR0913",  # test factory fixtures take many kwargs
]
# cli.py defers heavy subcommand imports (openai, uvicorn, pipeline modules)
# so `concord --help` stays fast.
"src/concord/cli.py" = ["PLC0415"]
# SQL built from module-level column tuples + `?` placeholders; no user input.
"src/concord/storage/sqlite.py" = ["S608"]
"src/concord/web/search.py" = ["S608"]

[tool.ruff.lint.mccabe]
max-complexity = 10

[tool.ruff.lint.pylint]
max-args = 8
max-branches = 12

[tool.mypy]
python_version = "3.12"
strict = true
files = ["src/concord"]

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false

[[tool.mypy.overrides]]
module = ["slowapi", "slowapi.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra --strict-markers"
